--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,15 @@
             <artifactId>JDA</artifactId>
             <version>5.0.0-beta.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/secretsmanager -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>secretsmanager</artifactId>
+            <version>2.25.21</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
